# emergent_in_context_learning

./: README.md  pyproject.toml
nbs/: 2411_dataload.py
src/eicl/: __main__.py
src/eicl/datasets/: data_generators.py
src/eicl/experiment/: experiment.py
src/eicl/experiment/configs/: images_all_exemplars.py  images_augmented.py  images_identical.py  resnet.py
src/eicl/modules/: embedding.py  rnn.py  transformer.py
src/emergent_in_context_learning/experiment/: __main__.py  experiment.py
src/emergent_in_context_learning/experiment/configs/: images_all_exemplars.py  images_augmented.py  images_identical.py
src/jaxline/: train.py
src/tk/: __init__.py  env.py
