[project]
name = "emergent-in-context-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax[cuda]>=0.4.35",
    "dill",
    "dm-haiku",
    # jaxline
    "absl-py",
    "chex",
    "ml_collections",
    "wrapt",
    "numpy",
    "typing_extensions",
    # jaxline END
    "ml_collections",
    "optax",
    "tensorflow>=2.18.0",
    # https://github.com/tensorflow/datasets/issues/4858#issuecomment-1554705743
    # tf metadata hax for protobuf error:
    #  1. Downgrade the protobuf package to 3.20.x or lower.
    #  2. Set PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python (but this will use pure-Python parsing and will be much slower).
    "tensorflow-metadata==1.13.0",
    "tensorflow_datasets>=4.9.7",
    # idk something with haiku.experimental fails w/out this
    "flax>=0.10.2",
]

[project.optional-dependencies]
nb = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
]

[tool.setuptools.packages]
# Include packages under src
find = { where = ["src"] }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
